# licenses

./: Cargo.toml  README.md  _config.yml  readme.md
.github/workflows/: deploy.yml  release.yml
choyxona-ware/: license.md
osh-ware/: license.md  readme.md
src/: main.rs
