[package]
name = "raisensu"
version = "0.1.2"
authors = ["Sokhibjon Orzikulov <sakhib@orzklv.uz>"]
license = "CC0-1.0"
description = "License manager created for Sokhibjon"
homepage = "https://orzklv.github.io/licenses"
repository = "https://github.com/orzklv/license"
readme = "readme.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
regex = "1"
